Add Plausible tracker

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@iconify-json/simple-line-icons": "^1.1.5",
     "@nuxt/devtools": "latest",
     "@nuxtjs/google-fonts": "^3.0.2",
+    "@nuxtjs/plausible": "^0.2.3",
     "@unocss/nuxt": "^0.57.2",
     "@unocss/postcss": "^0.57.3",
     "nuxt": "^3.8.1",
