--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "form-data": "^4.0.0",
-    "mailgun.js": "^9.3.0"
+    "mailgun.js": "^9.3.0",
+    "vue-recaptcha": "^3.0.0-alpha.6"
   }
 }
