Mark as available, link to Malt

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@unocss/nuxt": "^0.57.2",
     "@unocss/postcss": "^0.57.3",
     "nuxt": "^3.8.1",
+    "prettier": "^3.2.5",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
   },
